maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:35: error: unclosed character literal
  while (litMessage()==''){
                       ^JediEscaper:35: error: ')' expected but something found.
  while (litMessage()==''){
                       ^JediEscaper:45: error: illegal start of simple expression
}
^